<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">



    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.devforge.fitguard.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_guardian"
        android:name="com.devforge.fitguard.ui.guardian.GuardianFragment"
        android:label="@string/title_guardian"
        tools:layout="@layout/fragment_guardian" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.devforge.fitguard.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.devforge.fitguard.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting" />


</navigation>